Z-Index fix on product image

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -13479,7 +13479,9 @@ body #search_filters .clear-all-wrapper {
 
 
 .zoomContainer {
-  z-index: 9; }
+  z-index: 9;
+  pointer-events: none;
+}
 
 #product #content[data-templateview="right"] .product-flags {
   right: auto;
